--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,15 @@
+@media only screen and (max-width: 600px) {
+  #header {
+    font-size: 1.7rem; } }
+
+@media only screen and (min-width: 600px) {
+  #header {
+    font-size: 2.2rem; } }
+
+@media only screen and (min-width: 768px) {
+  #header {
+    font-size: 2.8rem; } }
+
 body {
   margin: 0;
   padding: 0;
@@ -8,11 +20,14 @@ body {
   color: lightblue;
   transition: color 0.7s; }
 
+.col-md-3 {
+  max-width: 190px; }
+
 .agent {
   border-radius: 5%;
   height: 180px;
   margin: 3%;
   transition: background-color 0.7s; }
 
-#header {
-  height: 200px; }
+#squares {
+  max-width: 768px; }
