--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,22 @@
+
+@media only screen and (max-width: 600px) {
+  #header {
+    font-size: 1.7rem;
+  }}
+
+@media only screen and (min-width: 600px) {
+ #header {
+   font-size: 2.2rem;
+ }
+}
+@media only screen and (min-width: 768px) {
+ #header {
+   font-size: 2.8rem;
+ }
+}
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -8,10 +27,9 @@ body {
   color: lightblue;
   transition: color 0.7s;
 }
-#text {
-
+.col-md-3 {
+  max-width: 190px;
 }
-
 .agent {
   // box-shadow: 1px 1px 1px;
   border-radius: 5%;
@@ -20,7 +38,6 @@ body {
   transition: background-color 0.7s;
   // border: #333 solid 1px;
 }
-
-#header {
-    height: 200px;
+#squares {
+  max-width: 768px;
 }
